# cargo-show-asm

./: .gitignore  CHANGELOG.md  Cargo.toml  Changelog.md  LICENSE-MIT  README.md  README.tpl  clippy.toml  doc.1  doc.md  release-plz.toml
.github/: FUNDING.yml  check.sh
.github/workflows/: check-and-lint.yaml  release-plz.yml
sample/: Cargo.toml
sample/src/: lib.rs  main.rs
sample_cdylib/: Cargo.toml
sample_cdylib/src/: lib.rs
sample_merged/: Cargo.toml
sample_merged/src/: lib.rs
sample_rlib/: Cargo.toml  lib.rs
src/: asm.rs  cached_lines.rs  callgraph.rs  demangle.rs  disasm.rs  lib.rs  llvm.rs  main.rs  mca.rs  mir.rs  opts.rs  rlib.rs
src/asm/: statements.rs
