[package]
name = "cargo-show-asm"
version = "0.2.30"
edition = "2021"
description = "A cargo subcommand that displays the generated assembly of Rust source code."
categories = ["development-tools::cargo-plugins", "development-tools::debugging"]
keywords = ["assembly", "plugins", "cargo"]
repository = "https://github.com/pacak/cargo-show-asm"
homepage = "https://github.com/pacak/cargo-show-asm"
authors = ["Michael Baykov <manpacket@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
bpaf = { version = "0.9.11", features = ["bpaf_derive", "autocomplete"] }
cargo_metadata = "0.18.1"
line-span = "0.1"
nom = "7"
once_cell = "1"
owo-colors = { version = "4", features = ["supports-colors"] }
regex = "1"
rustc-demangle = "0.1"
same-file = "1.0.6"
supports-color = "3.0"
serde = "=1.0.195"

[dev-dependencies]
bpaf = { version = "0.9.11", features = ["bpaf_derive", "autocomplete", "docgen"] }

[features]
bright-color = ["bpaf/bright-color"]
default = ["dull-color"]
dull-color = ["bpaf/dull-color"]

[[bin]]
name = "cargo-asm"
path = "src/main.rs"

[workspace.metadata.cauwugo]
bpaf = true

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.12.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "upload"
# Whether to install an updater program
install-updater = true

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
