[package]
name = "cargo-show-asm"
version = "0.2.51"
edition = "2021"
description = "A cargo subcommand that displays the generated assembly of Rust source code."
categories = ["development-tools::cargo-plugins", "development-tools::debugging"]
keywords = ["assembly", "plugins", "cargo"]
repository = "https://github.com/pacak/cargo-show-asm"
homepage = "https://github.com/pacak/cargo-show-asm"
authors = ["Michael Baykov <manpacket@gmail.com>"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
ar = { version = "0.9", optional = true }
bpaf = { version = "0.9.20", features = ["bpaf_derive", "autocomplete"] }
capstone = { version = "0.13", optional = true }
cargo_metadata = "0.19.2"
line-span = "0.1"
nom = "8"
object = { version = "0.37", optional = true }
owo-colors = { version = "4", features = ["supports-colors"] }
regex = "1"
rustc-demangle = "0.1"
same-file = "1.0.6"
serde = "=1.0.216"
supports-color = "3.0"

[dev-dependencies]
bpaf = { version = "0.9.20", features = ["bpaf_derive", "autocomplete", "docgen"] }
cargo-show-asm = { path = ".", features = ["disasm"] }


[features]
bright-color = ["bpaf/bright-color"]
default = ["dull-color"]
disasm = ["ar", "capstone", "object"]
dull-color = ["bpaf/dull-color"]

[[bin]]
name = "cargo-asm"
path = "src/main.rs"

[workspace.metadata.cauwugo]
bpaf = true

[profile.release-lto]
lto = true
codegen-units = 1
inherits = "release"
