[package]
name = "cargo-show-asm"
version = "0.2.59"
edition = "2021"
rust-version = "1.86"
description = "A cargo subcommand that displays the generated assembly of Rust source code."
readme = "README.md"
homepage = "https://github.com/pacak/cargo-show-asm"
repository = "https://github.com/pacak/cargo-show-asm"
license = "MIT OR Apache-2.0"
keywords = ["assembly", "cargo", "plugins"]
categories = [
  "development-tools::cargo-plugins",
  "development-tools::debugging",
]

[workspace.lints.clippy]
if_not_else = "warn"
items_after_statements = "warn"
wildcard_imports = "warn"

[workspace.metadata.cauwugo]
bpaf = true

[[bin]]
name = "cargo-asm"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ar = { version = "0.9", optional = true }
bpaf = { version = "0.9.25", features = ["autocomplete", "bpaf_derive"] }
capstone = { version = "0.14", optional = true }
cargo_metadata = "0.23.1"
line-span = "0.1"
nom = "8"
object = { version = "0.39", optional = true }
owo-colors = { version = "4", features = ["supports-colors"] }
regex = "1"
rustc-demangle = "0.1"
same-file = "1.0.6"
serde = "1.0.216"
supports-color = "3.0"

[dev-dependencies]
bpaf = { version = "0.9.25", features = [
  "autocomplete",
  "bpaf_derive",
  "docgen",
] }
cargo-show-asm = { path = ".", features = ["disasm"] }

[features]
default = ["_unstable", "dull-color"]
_unstable = ["cargo_metadata/unstable"]
bright-color = ["bpaf/bright-color"]
disasm = ["ar", "capstone", "object"]
dull-color = ["bpaf/dull-color"]

[lints]
workspace = true

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
